--- a/project.html
+++ b/project.html
@@ -159,7 +159,7 @@
 <header class="projects-hero">
     <h1>My Projects</h1>
     <p>Real-world applications built with passion & clean code</p>
-    <a href="home.html" class="btn-back"><i></i> Back Home</a>
+    <a href="index.html" class="btn-back"><i></i> Back Home</a>
 </header>
 
 <!-- Projects -->
@@ -208,3 +208,4 @@
 
 </body>
 </html>
+
