Fix HTML structure and styling issues

--- a/skills.html
+++ b/skills.html
@@ -159,7 +159,7 @@
     <header class="skills-hero">
         <h1>My <span>Expertise</span></h1>
         <p>Turning complex problems into elegant, functional digital solutions.</p>
-        <a href="home.html" class="btn-back"><i class="fas fa-arrow-left"></i> Back Home</a>
+        <a href="index.html" class="btn-back"><i class="fas fa-arrow-left"></i> Back Home</a>
     </header>
 
     <div class="container">
@@ -236,4 +236,5 @@
     </script>
 
 </body>
+
 </html>
