--- a/certifications.html
+++ b/certifications.html
@@ -213,7 +213,7 @@
     <section class="hero">
       <h1>My Certifications</h1>
       <p>Verified learning & professional achievements</p>
-      <a href="home.html" class="btn-back"
+      <a href="index.html" class="btn-back"
         ><i class="fa-solid fa-arrow-left"></i> Back Home</a
       >
     </section>
@@ -273,3 +273,4 @@ document.querySelectorAll(".cert-card img").forEach(img => {
 </script>
 
 </html>
+
